Edited wiki page through web user interface.

--- a/wiki/Descriptions.wiki
+++ b/wiki/Descriptions.wiki
@@ -5,11 +5,11 @@
 
 Cairngorm-Extended - расширение для фреймворка [http://labs.adobe.com/wiki/index.php/Cairngorm Cairngorm]. Хоть Cairngorm и удобен в использовании, кроме разве что названия,  в его стандартной поставке нет довольно базовых вещей без которых разрабатывать среднего и большого размера приложения трудно. Например, нет возможности построить произвольную очередь вызова асинхронных команд. Возможно в дальнейшем Cairngorm будет расширен всеми возможностями которые даёт данный фреймворк
 
-= Другие расширения для Cairngorm  =
+== Другие расширения для Cairngorm  ==
   * [http://code.google.com/p/flexcairngorm/ Flexcairngorm] - расширение от [http://universalmind.com/ UniversalMind], обладает всеми возможностями данного фреймворка и много больше.
 
 
-= Описание =
+== Описание ==
 
 Cairngorm-Extended дает возможность:
   * Реагировать на выполнение асинхронных команд в любом месте кода (Callback). Например, есть команда которая выполняет действие
