Edited wiki page through web user interface.

--- a/wiki/Description_ru.wiki
+++ b/wiki/Description_ru.wiki
@@ -12,5 +12,5 @@ Cairngorm-Extended - расширение для фреймворка [http://la
 == Описание ==
 
 Cairngorm-Extended дает возможность:
-  * Реагировать на выполнение асинхронных команд в любом месте кода (Callback). Например, есть команда которая выполняет действие
+  * Реагировать на выполнение асинхронных команд в любом месте кода (Callback). Это даёт возможность расширить действие команды не переписывая её. 
   * Строить произвольную очередь выполнения асинхронных команд. Для этого можно воспользоваться командой "MultiCommand", или же добавить очередь событий в свойство "events" наследника "Command". Синтаксис, примеры и подробное описание есть на соответствующих страницах классов.
